# maity_desktop

./: .gitattributes  .gitignore  BLUETOOTH_PLAYBACK_NOTICE.md  CLAUDE.md  CONTRIBUTING.md  PRIVACY_POLICY.md  README.md  SETUP_WINDOWS.md  TERMS_OF_SERVICE.md  package-lock.json  setup_dev_env.ps1
.claude/: settings.json  settings.local.json
backend/: API_DOCUMENTATION.md  Dockerfile.server-cpu  README.md  build-docker.ps1  build-docker.sh  docker-compose.yml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run-docker.ps1  run-docker.sh
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: BUILDING.md  CARGO_DEPENDENCIES.md  CHANGELOG_v0.3.0.md  COACH_FEATURE.md  COACH_LLM_ARCHITECTURE.md  ENTERPRISE_DEPLOYMENT.md  ENTERPRISE_ROADMAP.md  GPU_ACCELERATION.md  INCIDENT_RUNBOOK.md  PROJECT_STATUS.md  SOC2_ROADMAP.md  SUBPROCESSORS.md  TRANSCRIPTION_PIPELINE.md  architecture.md  building_in_linux.md
frontend/: .eslintrc.json  .gitignore  (+13 more)
frontend/src-tauri/: Cargo.toml  Info.plist  entitlements-appstore.plist  entitlements.plist  tauri.conf.json  tauri.macos.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/migrations/: 20250916100000_initial_schema.sql.sha384  20250920155811_add_openrouter_api_key.sql.sha384  20251006000000_add_audio_sync_fields.sql.sha384  20251010153942_add_ollama_endpoint.sql.sha384  20251101000000_add_summary_backup.sql.sha384  20251105120000_add_pro_license_custom_openai.sql.sha384  20251110000000_add_grace_period_to_licensing.sql.sha384  20251110000001_add_speaker_field.sql.sha384  20251223000000_add_meeting_notes.sql.sha384  20251229000000_add_gemini_api_key.sql.sha384  20260205000000_add_transcript_language.sql  20260205000000_add_transcript_language.sql.sha384  20260205100000_add_communication_feedback.sql  20260205100000_add_communication_feedback.sql.sha384  20260223000000_add_recording_logs.sql  20260223000000_add_recording_logs.sql.sha384  20260226000000_add_sync_queue.sql  20260226000000_add_sync_queue.sql.sha384  20260310000000_cleanup_ghost_meetings.sql  20260310000000_cleanup_ghost_meetings.sql.sha384  20260414000000_add_transcript_segments_live.sql  20260424000000_add_transcript_embeddings.sql  20260426000000_add_coach_settings.sql  20260426000000_add_coach_settings.sql.sha384  20260428000000_coach_settings_gguf.sql  20260428000000_coach_settings_gguf.sql.sha384  20260428000001_coach_settings_default_qwen.sql  20260428000001_coach_settings_default_qwen.sql.sha384  20260428000002_add_user_feedback.sql  20260428000002_add_user_feedback.sql.sha384  20260428100000_coach_settings_default_gemma1b.sql  20260428100000_coach_settings_default_gemma1b.sql.sha384  20260428200000_coach_settings_default_gemma4b.sql  20260428200000_coach_settings_default_gemma4b.sql.sha384  20260429000000_coach_settings_force_gemma4b.sql  20260429000000_coach_settings_force_gemma4b.sql.sha384  20260501100000_add_local_analysis_fields.sql  20260501100000_add_local_analysis_fields.sql.sha384  20260505120000_add_cloud_idempotency_key.sql  20260506000000_add_user_id_for_privacy.sql  (+1 more)
frontend/src-tauri/scripts/: sign-windows.ps1
frontend/src-tauri/src/: auth_server.rs  builtin_ai.rs  export.rs  lib.rs  onboarding.rs  progress_events.rs  secure_storage.rs  state.rs  tray.rs
frontend/src-tauri/src/api/: api.rs  endpoints.rs  finalize.rs  mod.rs  models.rs  regenerate_minutes.rs
frontend/src-tauri/src/audio/: audio_processing.rs  device_detection.rs  dsp.rs  incremental_saver.rs  mod.rs  pipeline.rs  recording_commands.rs  recording_helpers.rs  recording_lifecycle.rs  recording_manager.rs  recording_preferences.rs  recording_saver.rs  recording_state.rs  recording_widget.rs  simple_level_monitor.rs  stream.rs  thread_priority_helper.rs  transcript_live_streamer.rs  vad.rs
frontend/src-tauri/src/audio/capture/: backend_config.rs  core_audio.rs  wasapi_loopback.rs
frontend/src-tauri/src/audio/devices/: device_name_matcher.rs  fallback.rs  mod.rs
frontend/src-tauri/src/audio/devices/platform/: windows.rs
frontend/src-tauri/src/audio/transcription/: circuit_breaker.rs  deepgram_commands.rs  deepgram_provider.rs  engine.rs  mod.rs  onnx_lifecycle.rs  onnx_providers.rs  provider.rs  spanish_postprocess.rs  spill_queue.rs  worker.rs
frontend/src-tauri/src/canary_engine/: canary_engine.rs  commands.rs  model.rs
frontend/src-tauri/src/coach/: chat.rs  commands.rs  context.rs  evaluator.rs  live_feedback.rs  llama_engine.rs  llm_helper.rs  llm_service.rs  meeting_type.rs  mod.rs  model_registry.rs  nudge_engine.rs  prompt.rs  service.rs  setup.rs  stress_tests.rs  trigger.rs
frontend/src-tauri/src/console_utils/: console_utils.rs
frontend/src-tauri/src/database/: commands.rs  manager.rs  mod.rs  models.rs  setup.rs  sync_queue_commands.rs
frontend/src-tauri/src/database/repositories/: meeting.rs  mod.rs  recording_log.rs  setting.rs  summary.rs  sync_queue.rs  transcript.rs  transcript_chunk.rs
frontend/src-tauri/src/llm/: error.rs  metrics.rs  mod.rs  request.rs  response.rs  service.rs  transport.rs
frontend/src-tauri/src/logging/: commands.rs
frontend/src-tauri/src/moonshine_engine/: model.rs  moonshine_engine.rs
frontend/src-tauri/src/notifications/: manager.rs  settings.rs  types.rs
frontend/src-tauri/src/orchestrator/: commands.rs  context_analyzer.rs  mod.rs
frontend/src-tauri/src/parakeet_engine/: commands.rs  mod.rs  model.rs  parakeet_engine.rs  text_cleanup.rs
frontend/src-tauri/src/recording_pipeline/: config.rs  mod.rs  registry.rs
frontend/src-tauri/src/scheduled_recording/: commands.rs  mod.rs  schedule.rs  service.rs  settings.rs
frontend/src-tauri/src/semantic_search/: commands.rs  embedder.rs  mod.rs  repository.rs
frontend/src-tauri/src/summary/: communication_evaluator.rs  communication_types.rs  llm_service.rs  mod.rs  processor.rs  service.rs
frontend/src-tauri/src/summary/summary_engine/: client.rs  mod.rs  models.rs  sidecar.rs
frontend/src-tauri/src/summary/templates/: loader.rs
(+468 files in other folders)
